--- a/scss/_G-midOne.scss
+++ b/scss/_G-midOne.scss
@@ -32,10 +32,11 @@
   #midOneWheelsHolder {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    width: 100%;
 
     @media (min-width: 300px) and (max-width: 1023px) {
       flex-direction: column;
+      row-gap: 100px;
     }
 
     #midOneWheelOne {
@@ -43,6 +44,11 @@
       flex-direction: column;
       height: fit-content;
       align-items: center;
+      width: 25%;
+
+      @media (min-width: 300px) and (max-width: 1023px) {
+        width: 100%;
+      }
 
       #pic {
         display: flex;
@@ -75,49 +81,62 @@
 
         #bgOne {
           background-image: url('../images/coffeeONE.jpg');
-          width: 17em;
-          height: 17em;
+          width: 275px;
+          height: 275px;
           border-radius: 50%;
-          transition: all 0.5s ease;
           background-position: 12% 12%;
 
           @include breakPoints(laptop) {
-            width: 14em;
-            height: 14em;
+            width: 220px;
+            height: 220px;
           }
         }
 
         #two {
           position: absolute;
           padding: 25px 30px;
-          background-color: rgb(77, 139, 85);
+          background-color: #4d8b55;
           border-radius: 50%;
-          color: rgb(244, 244, 244);
+          color: #f4f4f4;
           font-size: 20px;
           font-weight: 700;
-          transition: all 0.5s ease;
         }
       }
 
       #three {
-        margin-top: 1em;
-        color: rgb(0, 0, 0);
+        margin-top: 20px;
+        color: #000000;
         font-size: 25px;
         font-weight: 700;
       }
 
       #four {
-        width: min(100% - 0em, 20em);
-        margin-top: 1.5em;
+        width: 85%;
+        margin-top: 15px;
         text-align: center;
 
         @include breakPoints(small) {
           font-size: 13px;
         }
 
+        @media (min-width: 512px) and (max-width: 613px) {
+          width: 70%;
+        }
+
+        @media (min-width: 613px) and (max-width: 738px) {
+          width: 60%;
+        }
+
+        @media (min-width: 738px) and (max-width: 948px) {
+          width: 50%;
+        }
+
+        @media (min-width: 948px) and (max-width: 1023px) {
+          width: 35%;
+        }
+
         @include breakPoints(laptop) {
           font-size: 13px;
-          width: min(100% - 0em, 17em);
         }
       }
     }
@@ -127,6 +146,11 @@
       flex-direction: column;
       height: fit-content;
       align-items: center;
+      width: 25%;
+
+      @media (min-width: 300px) and (max-width: 1023px) {
+        width: 100%;
+      }
 
       #pic {
         display: flex;
@@ -159,49 +183,62 @@
 
         #bgTwo {
           background-image: url('../images/coffeeTWO.jpg');
-          width: 17em;
-          height: 17em;
+          width: 275px;
+          height: 275px;
           border-radius: 50%;
-          transition: all 0.5s ease;
           background-position: 12% 12%;
 
           @include breakPoints(laptop) {
-            width: 14em;
-            height: 14em;
+            width: 220px;
+            height: 220px;
           }
         }
 
         #two {
           position: absolute;
           padding: 25px 30px;
-          background-color: rgb(77, 139, 85);
+          background-color: #4d8b55;
           border-radius: 50%;
-          color: rgb(244, 244, 244);
+          color: #f4f4f4;
           font-size: 20px;
           font-weight: 700;
-          transition: all 0.5s ease;
         }
       }
 
       #three {
-        margin-top: 1em;
-        color: rgb(0, 0, 0);
+        margin-top: 20px;
+        color: #000000;
         font-size: 25px;
         font-weight: 700;
       }
 
       #four {
-        width: min(100% - 0em, 20em);
-        margin-top: 1.5em;
+        width: 85%;
+        margin-top: 15px;
         text-align: center;
 
         @include breakPoints(small) {
           font-size: 13px;
         }
 
+        @media (min-width: 512px) and (max-width: 613px) {
+          width: 70%;
+        }
+
+        @media (min-width: 613px) and (max-width: 738px) {
+          width: 60%;
+        }
+
+        @media (min-width: 738px) and (max-width: 948px) {
+          width: 50%;
+        }
+
+        @media (min-width: 948px) and (max-width: 1023px) {
+          width: 35%;
+        }
+
         @include breakPoints(laptop) {
           font-size: 13px;
-          width: min(100% - 0em, 17em);
         }
       }
     }
@@ -211,6 +248,11 @@
       flex-direction: column;
       height: fit-content;
       align-items: center;
+      width: 25%;
+
+      @media (min-width: 300px) and (max-width: 1023px) {
+        width: 100%;
+      }
 
       #pic {
         display: flex;
@@ -243,49 +285,62 @@
 
         #bgThree {
           background-image: url('../images/coffeeTHREE.jpg');
-          width: 17em;
-          height: 17em;
+          width: 275px;
+          height: 275px;
           border-radius: 50%;
-          transition: all 0.5s ease;
           background-position: 12% 12%;
 
           @include breakPoints(laptop) {
-            width: 14em;
-            height: 14em;
+            width: 220px;
+            height: 220px;
           }
         }
 
         #two {
           position: absolute;
           padding: 25px 30px;
-          background-color: rgb(77, 139, 85);
+          background-color: #4d8b55;
           border-radius: 50%;
-          color: rgb(244, 244, 244);
+          color: #f4f4f4;
           font-size: 20px;
           font-weight: 700;
-          transition: all 0.5s ease;
         }
       }
 
       #three {
-        margin-top: 1em;
-        color: rgb(0, 0, 0);
+        margin-top: 20px;
+        color: #000000;
         font-size: 25px;
         font-weight: 700;
       }
 
       #four {
-        width: min(100% - 0em, 20em);
-        margin-top: 1.5em;
+        width: 85%;
+        margin-top: 15px;
         text-align: center;
 
         @include breakPoints(small) {
           font-size: 13px;
         }
 
+        @media (min-width: 512px) and (max-width: 613px) {
+          width: 70%;
+        }
+
+        @media (min-width: 613px) and (max-width: 738px) {
+          width: 60%;
+        }
+
+        @media (min-width: 738px) and (max-width: 948px) {
+          width: 50%;
+        }
+
+        @media (min-width: 948px) and (max-width: 1023px) {
+          width: 35%;
+        }
+
         @include breakPoints(laptop) {
           font-size: 13px;
-          width: min(100% - 0em, 17em);
         }
       }
     }
@@ -295,6 +350,11 @@
       flex-direction: column;
       height: fit-content;
       align-items: center;
+      width: 25%;
+
+      @media (min-width: 300px) and (max-width: 1023px) {
+        width: 100%;
+      }
 
       #pic {
         display: flex;
@@ -327,49 +387,62 @@
 
         #bgFour {
           background-image: url('../images/coffeeFOUR.jpg');
-          width: 17em;
-          height: 17em;
+          width: 275px;
+          height: 275px;
           border-radius: 50%;
-          transition: all 0.5s ease;
           background-position: 12% 12%;
 
           @include breakPoints(laptop) {
-            width: 14em;
-            height: 14em;
+            width: 220px;
+            height: 220px;
           }
         }
 
         #two {
           position: absolute;
           padding: 25px 30px;
-          background-color: rgb(77, 139, 85);
+          background-color: #4d8b55;
           border-radius: 50%;
-          color: rgb(244, 244, 244);
+          color: #f4f4f4;
           font-size: 20px;
           font-weight: 700;
-          transition: all 0.5s ease;
         }
       }
 
       #three {
-        margin-top: 1em;
-        color: rgb(0, 0, 0);
+        margin-top: 20px;
+        color: #000000;
         font-size: 25px;
         font-weight: 700;
       }
 
       #four {
-        width: min(100% - 0em, 20em);
-        margin-top: 1.5em;
+        width: 85%;
+        margin-top: 15px;
         text-align: center;
 
         @include breakPoints(small) {
           font-size: 13px;
         }
 
+        @media (min-width: 512px) and (max-width: 613px) {
+          width: 70%;
+        }
+
+        @media (min-width: 613px) and (max-width: 738px) {
+          width: 60%;
+        }
+
+        @media (min-width: 738px) and (max-width: 948px) {
+          width: 50%;
+        }
+
+        @media (min-width: 948px) and (max-width: 1023px) {
+          width: 35%;
+        }
+
         @include breakPoints(laptop) {
           font-size: 13px;
-          width: min(100% - 0em, 17em);
         }
       }
     }
