--- a/css/main.css
+++ b/css/main.css
@@ -291,7 +291,7 @@
     display: none;
   }
 }
-#D-topOne #topOneHeader #topOneMid ul #hoome {
+#D-topOne #topOneHeader #topOneMid ul #home {
   width: fit-content;
   color: #7bff8d;
   cursor: pointer;
