--- a/scss/_D-topOne.scss
+++ b/scss/_D-topOne.scss
@@ -127,7 +127,7 @@
           display: none;
         }
 
-        #hoome {
+        #home {
           width: fit-content;
           color: #7bff8d;
           cursor: pointer;
