--- a/scss/_C-navMob.scss
+++ b/scss/_C-navMob.scss
@@ -58,21 +58,21 @@
           column-gap: 40px;
 
           #user {
-            background-image: url('/images/mobile/user.svg');
+            background-image: url('/images/C-navMob/user.svg');
             width: 30px;
             height: 30px;
             cursor: pointer;
           }
 
           #bag {
-            background-image: url('/images/mobile/bag.svg');
+            background-image: url('/images/C-navMob/bag.svg');
             width: 30px;
             height: 30px;
             cursor: pointer;
           }
 
           #search {
-            background-image: url('/images/mobile/search.svg');
+            background-image: url('/images/C-navMob/search.svg');
             width: 30px;
             height: 30px;
             cursor: pointer;
@@ -122,28 +122,28 @@
           margin-top: 40px;
 
           #instagram {
-            background-image: url('/images/mobile/instagram.svg');
+            background-image: url('/images/C-navMob/instagram.svg');
             width: 20px;
             height: 20px;
             cursor: pointer;
           }
 
           #x {
-            background-image: url('/images/mobile/x.svg');
+            background-image: url('/images/C-navMob/x.svg');
             width: 22px;
             height: 22px;
             cursor: pointer;
           }
 
           #telegram {
-            background-image: url('/images/mobile/telegram.svg');
+            background-image: url('/images/C-navMob/telegram.svg');
             width: 19px;
             height: 19px;
             cursor: pointer;
           }
 
           #youtube {
-            background-image: url('/images/mobile/youtube.svg');
+            background-image: url('/images/C-navMob/youtube.svg');
             width: 20px;
             height: 20px;
             cursor: pointer;
