--- a/scss/_E-topTwo.scss
+++ b/scss/_E-topTwo.scss
@@ -7,7 +7,7 @@
   align-items: center;
 
   #topTwobgOne {
-    background-image: url('../images/leafPATTERNS.png');
+    background-image: url('../images/E-topTwo/topTwobgOne.png');
     width: 100%;
     height: 295px;
     background-color: rgb(77, 139, 85);
@@ -34,7 +34,7 @@
   }
 
   #topTwobgTwo {
-    background-image: url('../images/topBEANS.png');
+    background-image: url('../images/E-topTwo/topTwobgTwo.png');
     position: absolute;
     width: 774px;
     height: 609px;
