--- a/scss/_F-topTHREE.scss
+++ b/scss/_F-topTHREE.scss
@@ -137,7 +137,7 @@
         cursor: pointer;
 
         #pic {
-          background-image: url('../images/download.svg');
+          background-image: url('../images/F-topThree/download.svg');
           width: 21px;
           height: 21px;
         }
@@ -151,7 +151,7 @@
         cursor: pointer;
 
         #pic {
-          background-image: url('../images/call.svg');
+          background-image: url('../images/F-topThree/call.svg');
           width: 21px;
           height: 21px;
         }
@@ -264,7 +264,7 @@
     }
 
     #pic {
-      background-image: url('../images/pouringBEANS.jpg');
+      background-image: url('../images/F-topThree/pouringBeans.jpg');
       width: 350px;
       height: 350px;
       background-repeat: no-repeat;
