--- a/css/main.css
+++ b/css/main.css
@@ -66,19 +66,19 @@
   column-gap: 40px;
 }
 #C-navMob #navMobMenu #navMobContent #navMobAccount #navMobIcons #user {
-  background-image: url("/images/mobile/user.svg");
+  background-image: url("/images/C-navMob/user.svg");
   width: 30px;
   height: 30px;
   cursor: pointer;
 }
 #C-navMob #navMobMenu #navMobContent #navMobAccount #navMobIcons #bag {
-  background-image: url("/images/mobile/bag.svg");
+  background-image: url("/images/C-navMob/bag.svg");
   width: 30px;
   height: 30px;
   cursor: pointer;
 }
 #C-navMob #navMobMenu #navMobContent #navMobAccount #navMobIcons #search {
-  background-image: url("/images/mobile/search.svg");
+  background-image: url("/images/C-navMob/search.svg");
   width: 30px;
   height: 30px;
   cursor: pointer;
@@ -121,25 +121,25 @@
   margin-top: 40px;
 }
 #C-navMob #navMobMenu #navMobContent #navMobFollowUsOn #icons #instagram {
-  background-image: url("/images/mobile/instagram.svg");
+  background-image: url("/images/C-navMob/instagram.svg");
   width: 20px;
   height: 20px;
   cursor: pointer;
 }
 #C-navMob #navMobMenu #navMobContent #navMobFollowUsOn #icons #x {
-  background-image: url("/images/mobile/x.svg");
+  background-image: url("/images/C-navMob/x.svg");
   width: 22px;
   height: 22px;
   cursor: pointer;
 }
 #C-navMob #navMobMenu #navMobContent #navMobFollowUsOn #icons #telegram {
-  background-image: url("/images/mobile/telegram.svg");
+  background-image: url("/images/C-navMob/telegram.svg");
   width: 19px;
   height: 19px;
   cursor: pointer;
 }
 #C-navMob #navMobMenu #navMobContent #navMobFollowUsOn #icons #youtube {
-  background-image: url("/images/mobile/youtube.svg");
+  background-image: url("/images/C-navMob/youtube.svg");
   width: 20px;
   height: 20px;
   cursor: pointer;
@@ -192,7 +192,7 @@
 }
 #D-topOne #topOneBgOne {
   position: absolute;
-  background-image: url("../images/topCOFFE.jpg");
+  background-image: url("../images/D-topOne/topOneBgOne.jpg");
   width: inherit;
   height: inherit;
   filter: brightness(27%);
@@ -227,35 +227,31 @@
     display: none;
   }
 }
-#D-topOne #topOneHeader #topOneLeft p {
-  color: #f4f4f4;
-  font-size: 14px;
-}
 #D-topOne #topOneHeader #topOneLeft #topOneIconsOne {
   display: flex;
   flex-direction: row;
   column-gap: 20px;
 }
 #D-topOne #topOneHeader #topOneLeft #topOneIconsOne #instagram {
-  background-image: url("/images/instagram.svg");
+  background-image: url("/images/D-topOne/instagram.svg");
   width: 22px;
   height: 22px;
   cursor: pointer;
 }
 #D-topOne #topOneHeader #topOneLeft #topOneIconsOne #x {
-  background-image: url("/images/x.svg");
+  background-image: url("/images/D-topOne/x.svg");
   width: 24px;
   height: 24px;
   cursor: pointer;
 }
 #D-topOne #topOneHeader #topOneLeft #topOneIconsOne #telegram {
-  background-image: url("/images/telegram.svg");
+  background-image: url("/images/D-topOne/telegram.svg");
   width: 21px;
   height: 21px;
   cursor: pointer;
 }
 #D-topOne #topOneHeader #topOneLeft #topOneIconsOne #youtube {
-  background-image: url("/images/youtube.svg");
+  background-image: url("/images/D-topOne/youtube.svg");
   width: 22px;
   height: 22px;
   cursor: pointer;
@@ -273,7 +269,7 @@
   }
 }
 #D-topOne #topOneHeader #topOneMid #logo {
-  background-image: url("../images/logo.png");
+  background-image: url("../images/D-topOne/logo.png");
   width: 100px;
   height: 94px;
   cursor: pointer;
@@ -318,19 +314,19 @@
   column-gap: 40px;
 }
 #D-topOne #topOneHeader #topOneRight #topOneIconsTwo #user {
-  background-image: url("/images/user.svg");
+  background-image: url("/images/D-topOne/user.svg");
   width: 30px;
   height: 30px;
   cursor: pointer;
 }
 #D-topOne #topOneHeader #topOneRight #topOneIconsTwo #bag {
-  background-image: url("/images/bag.svg");
+  background-image: url("/images/D-topOne/bag.svg");
   width: 30px;
   height: 30px;
   cursor: pointer;
 }
 #D-topOne #topOneHeader #topOneRight #topOneIconsTwo #search {
-  background-image: url("/images/search.svg");
+  background-image: url("/images/D-topOne/search.svg");
   width: 30px;
   height: 30px;
   cursor: pointer;
@@ -415,7 +411,7 @@
   align-items: center;
 }
 #E-topTwo #topTwobgOne {
-  background-image: url("../images/leafPATTERNS.png");
+  background-image: url("../images/E-topTwo/topTwobgOne.png");
   width: 100%;
   height: 295px;
   background-color: rgb(77, 139, 85);
@@ -446,7 +442,7 @@
   }
 }
 #E-topTwo #topTwobgTwo {
-  background-image: url("../images/topBEANS.png");
+  background-image: url("../images/E-topTwo/topTwobgTwo.png");
   position: absolute;
   width: 774px;
   height: 609px;
@@ -636,7 +632,7 @@
   cursor: pointer;
 }
 #F-topThree #topThreeLeft #topThreeContacts #download #pic {
-  background-image: url("../images/download.svg");
+  background-image: url("../images/F-topThree/download.svg");
   width: 21px;
   height: 21px;
 }
@@ -648,7 +644,7 @@
   cursor: pointer;
 }
 #F-topThree #topThreeLeft #topThreeContacts #call #pic {
-  background-image: url("../images/call.svg");
+  background-image: url("../images/F-topThree/call.svg");
   width: 21px;
   height: 21px;
 }
@@ -758,7 +754,7 @@
   text-align: start;
 }
 #F-topThree #topThreeRight #pic {
-  background-image: url("../images/pouringBEANS.jpg");
+  background-image: url("../images/F-topThree/pouringBeans.jpg");
   width: 350px;
   height: 350px;
   background-repeat: no-repeat;
@@ -796,7 +792,7 @@
   width: 100%;
   height: fit-content;
   padding: 60px 20px 60px 20px;
-  background-image: url("../images/paperBG.jpg");
+  background-image: url("../images/G-midOne/paperBg.jpg");
 }
 #G-midOne #midOneTitle {
   width: 85%;
@@ -809,7 +805,7 @@
   background-position-x: 50%;
   background-repeat: no-repeat;
   background-size: contain;
-  background-image: url("../images/leafsANDBEANS.png");
+  background-image: url("../images/G-midOne/midOneTitleBg.png");
 }
 @media (min-width: 300px) and (max-width: 399px) {
   #G-midOne #midOneTitle {
@@ -874,7 +870,7 @@
   }
 }
 #G-midOne #midOneWheelsHolder #midOneWheelOne #pic #bgOne {
-  background-image: url("../images/coffeeONE.jpg");
+  background-image: url("../images/G-midOne/bgOne.jpg");
   width: 275px;
   height: 275px;
   border-radius: 50%;
@@ -978,7 +974,7 @@
   }
 }
 #G-midOne #midOneWheelsHolder #midOneWheelTwo #pic #bgTwo {
-  background-image: url("../images/coffeeTWO.jpg");
+  background-image: url("../images/G-midOne/bgTwo.jpg");
   width: 275px;
   height: 275px;
   border-radius: 50%;
@@ -1082,7 +1078,7 @@
   }
 }
 #G-midOne #midOneWheelsHolder #midOneWheelThree #pic #bgThree {
-  background-image: url("../images/coffeeTHREE.jpg");
+  background-image: url("../images/G-midOne/bgThree.jpg");
   width: 275px;
   height: 275px;
   border-radius: 50%;
@@ -1186,7 +1182,7 @@
   }
 }
 #G-midOne #midOneWheelsHolder #midOneWheelFour #pic #bgFour {
-  background-image: url("../images/coffeeFOUR.jpg");
+  background-image: url("../images/G-midOne/bgFour.jpg");
   width: 275px;
   height: 275px;
   border-radius: 50%;
@@ -1249,231 +1245,126 @@
   }
 }
 
-#midTWO {
+#H-midTwo {
   display: flex;
-  width: inherit;
+  width: 100%;
 }
-#midTWO #bgs {
+#H-midTwo #midTwoBackgrounds {
   display: flex;
   flex-direction: row;
-  width: inherit;
+  width: 100%;
 }
-#midTWO #bgs #bgONE {
-  width: 33.333%;
-  height: 45em;
-  background-image: url("../images/midCOFFEE.jpg");
+#H-midTwo #midTwoBackgrounds #bgOne {
+  width: 33%;
+  position: relative;
+  background-image: url("../images/H-midTwo/bgOne.jpg");
   background-position: 40% 0;
   background-size: cover;
 }
-@media (min-width: 300px) and (max-width: 399px) {
-  #midTWO #bgs #bgONE {
+@media (min-width: 300px) and (max-width: 1023px) {
+  #H-midTwo #midTwoBackgrounds #bgOne {
     display: none;
   }
 }
-@media (min-width: 399px) and (max-width: 767px) {
-  #midTWO #bgs #bgONE {
-    display: none;
-  }
-}
-@media (min-width: 767px) and (max-width: 1023px) {
-  #midTWO #bgs #bgONE {
-    display: none;
-  }
-}
-#midTWO #bgs #bgONE #stamp {
-  width: 10.7em;
-  height: 10.7em;
-  position: relative;
-  bottom: -2em;
-  left: 10em;
-  background-image: url("../images/stamp.png");
+#H-midTwo #midTwoBackgrounds #bgOne #stamp {
+  width: 160px;
+  height: 160px;
+  position: absolute;
+  top: 30px;
+  right: 100px;
+  background-image: url("../images/H-midTwo/stamp.png");
   background-repeat: no-repeat;
 }
-#midTWO #bgs #bgTWO {
-  width: 33.333%;
-  height: 45em;
-  background-color: rgb(77, 139, 85);
+#H-midTwo #midTwoBackgrounds #bgTwo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  row-gap: 50px;
+  width: 34%;
+  height: 650px;
+  padding-left: 20px;
+  background-color: #4d8b55;
   background-position: 40% 0;
   background-size: cover;
-  background-image: url("../images/leafsANDBEANS.png");
+  background-image: url("../images/H-midTwo/bgTwo.png");
 }
 @media (min-width: 300px) and (max-width: 399px) {
-  #midTWO #bgs #bgTWO {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 28em;
-    align-items: center;
-    background-repeat: no-repeat;
-    background-position: 50%;
-    background-size: unset;
+  #H-midTwo #midTwoBackgrounds #bgTwo {
+    height: 500px;
   }
 }
 @media (min-width: 399px) and (max-width: 767px) {
-  #midTWO #bgs #bgTWO {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 30.5em;
-    align-items: center;
-    background-repeat: no-repeat;
-    background-position: 50%;
-    background-size: unset;
+  #H-midTwo #midTwoBackgrounds #bgTwo {
+    height: 490px;
   }
 }
 @media (min-width: 767px) and (max-width: 1023px) {
-  #midTWO #bgs #bgTWO {
+  #H-midTwo #midTwoBackgrounds #bgTwo {
+    height: 505px;
+  }
+}
+@media (min-width: 300px) and (max-width: 1023px) {
+  #H-midTwo #midTwoBackgrounds #bgTwo {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 31.5em;
     align-items: center;
     background-repeat: no-repeat;
     background-position: 50%;
     background-size: unset;
   }
 }
-#midTWO #bgs #bgTWO #one {
-  width: min(100% - 3em, 7em);
-  margin: 1.5em 0 0 0.5em;
+#H-midTwo #midTwoBackgrounds #bgTwo #one {
+  width: min(100% - 48px, 335px);
   font-size: 48px;
-  color: rgb(0, 0, 0);
+  color: #000000;
+  font-weight: 700;
+}
+#H-midTwo #midTwoBackgrounds #bgTwo #one span {
+  width: min(100% - 48px, 335px);
+  font-size: 48px;
+  color: #ffffff;
   font-weight: 700;
   align-self: center;
 }
-@media (min-width: 300px) and (max-width: 399px) {
-  #midTWO #bgs #bgTWO #one {
-    font-size: 30px;
-    margin-left: 0;
-  }
-}
-@media (min-width: 399px) and (max-width: 767px) {
-  #midTWO #bgs #bgTWO #one {
-    font-size: 33px;
-    margin-left: 0;
-  }
-}
-@media (min-width: 767px) and (max-width: 1023px) {
-  #midTWO #bgs #bgTWO #one {
-    font-size: 36px;
-    margin-left: 0;
-  }
-}
-@media (min-width: 1023px) and (max-width: 1439px) {
-  #midTWO #bgs #bgTWO #one {
-    margin-left: 0.5em;
-  }
-}
-#midTWO #bgs #bgTWO #two {
-  width: min(100% - 1em, 7em);
-  margin-left: 0.5em;
-  font-size: 48px;
-  color: rgb(244, 244, 244);
-  font-weight: 700;
-  align-self: center;
-}
-@media (min-width: 300px) and (max-width: 399px) {
-  #midTWO #bgs #bgTWO #two {
-    font-size: 30px;
-    margin: 0;
-  }
-}
-@media (min-width: 399px) and (max-width: 767px) {
-  #midTWO #bgs #bgTWO #two {
-    font-size: 33px;
-    margin: 0;
-  }
-}
-@media (min-width: 767px) and (max-width: 1023px) {
-  #midTWO #bgs #bgTWO #two {
-    font-size: 36px;
-    margin: 0;
-  }
-}
-#midTWO #bgs #bgTWO #three {
-  width: min(100% - 3em, 23em);
-  margin: 2em 0 0 2em;
-  color: rgb(244, 244, 244);
+#H-midTwo #midTwoBackgrounds #bgTwo #two {
+  width: min(100% - 48px, 370px);
+  color: #ffffff;
   font-size: 16px;
   text-align: start;
 }
-@media (min-width: 300px) and (max-width: 399px) {
-  #midTWO #bgs #bgTWO #three {
-    width: min(100% - 1em, 18em);
-    font-size: 14px;
-    margin: 1em 0 0 0;
-  }
-}
-@media (min-width: 399px) and (max-width: 767px) {
-  #midTWO #bgs #bgTWO #three {
-    width: min(100% - 5em, 20em);
-    font-size: 16px;
-    margin: 1.5em 0 0 0;
-  }
-}
-@media (min-width: 767px) and (max-width: 1023px) {
-  #midTWO #bgs #bgTWO #three {
-    width: min(100% - 5em, 18em);
-    font-size: 16px;
-    margin: 1.5em 0 0 0;
-  }
-}
-@media (min-width: 1023px) and (max-width: 1439px) {
-  #midTWO #bgs #bgTWO #three {
-    margin: 2em 0 0 0.5em;
-  }
-}
-#midTWO #bgs #bgTWO #read {
-  width: 17.5em;
-  height: 3.5em;
-  margin: 5em 0 0 2em;
-  position: relative;
-  transition: all 0.5s ease;
+#H-midTwo #midTwoBackgrounds #bgTwo #read {
+  width: 225px;
+  height: 45px;
   border: none;
   border-radius: 40px;
   background-color: rgb(60, 60, 60);
   font-size: 13px;
-  color: rgb(244, 244, 244);
+  color: #f4f4f4;
 }
-@media (min-width: 300px) and (max-width: 399px) {
-  #midTWO #bgs #bgTWO #read {
-    margin-left: 0;
-  }
-}
-@media (min-width: 399px) and (max-width: 767px) {
-  #midTWO #bgs #bgTWO #read {
-    margin-left: 0;
-  }
-}
-@media (min-width: 767px) and (max-width: 1023px) {
-  #midTWO #bgs #bgTWO #read {
-    margin-left: 0;
-  }
-}
-#midTWO #bgs #bgTWO #read:hover {
+#H-midTwo #midTwoBackgrounds #bgTwo #read:hover {
   cursor: pointer;
-  background-color: rgb(20, 20, 20);
+  background-color: #141414;
 }
-#midTWO #bgs #bgTHREE {
-  width: 33.333%;
-  height: 45em;
-  background-color: rgb(77, 139, 85);
+#H-midTwo #midTwoBackgrounds #bgThree {
+  width: 33%;
+  background-color: #4d8b55;
   background-position: 40% 0;
   background-size: cover;
-  background-image: url("../images/aroma.jpg");
+  background-image: url("../images/H-midTwo/bgThree.jpg");
 }
 @media (min-width: 300px) and (max-width: 399px) {
-  #midTWO #bgs #bgTHREE {
+  #H-midTwo #midTwoBackgrounds #bgThree {
     display: none;
   }
 }
 @media (min-width: 399px) and (max-width: 767px) {
-  #midTWO #bgs #bgTHREE {
+  #H-midTwo #midTwoBackgrounds #bgThree {
     display: none;
   }
 }
 @media (min-width: 767px) and (max-width: 1023px) {
-  #midTWO #bgs #bgTHREE {
+  #H-midTwo #midTwoBackgrounds #bgThree {
     display: none;
   }
 }
